# ChangeLog for dev-ruby/coderay
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/coderay/ChangeLog,v 1.15 2010/01/24 14:00:59 graaff Exp $

  24 Jan 2010; Hans de Graaff <graaff@gentoo.org> -coderay-0.8.312.ebuild,
  -coderay-0.8.357.ebuild, -coderay-0.8.357-r1.ebuild:
  Remove old versions.

  15 Jan 2010; Raúl Porcel <armin76@gentoo.org> coderay-0.8.260.ebuild,
  coderay-0.8.312.ebuild, coderay-0.8.357.ebuild, coderay-0.8.357-r1.ebuild,
  coderay-0.9.1.ebuild:
  Add ~ia64/~sparc wrt #300372

  14 Jan 2010; Brent Baude <ranger@gentoo.org> coderay-0.9.1.ebuild:
  Marking coderay-0.9.1 ~ppc for bug 297711

  13 Jan 2010; Brent Baude <ranger@gentoo.org> coderay-0.9.1.ebuild:
  Marking coderay-0.9.1 ~ppc64 for bug 300739

*coderay-0.9.1 (01 Jan 2010)

  01 Jan 2010; Hans de Graaff <graaff@gentoo.org> +coderay-0.9.1.ebuild:
  Version bump.

*coderay-0.8.357-r1 (15 Dec 2009)

  15 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +coderay-0.8.357-r1.ebuild:
  Bump to ruby-fakegem.

*coderay-0.8.357 (15 Oct 2009)

  15 Oct 2009; Alex Legler <a3li@gentoo.org> +coderay-0.8.357.ebuild:
  Version bump, raising ruby dependency

*coderay-0.8.312 (27 Jun 2009)

  27 Jun 2009; Hans de Graaff <graaff@gentoo.org> +coderay-0.8.312.ebuild:
  Version bump.

  27 Jun 2009; Hans de Graaff <graaff@gentoo.org> -coderay-0.7.4.215.ebuild:
  Remove old version.

  20 Apr 2009; Markus Meier <maekke@gentoo.org> coderay-0.8.260:
  x86 stable, bug #266506

  18 Apr 2009; Thomas Anderson <gentoofan23@gentoo.org>
  coderay-0.8.260.ebuild:
  stable amd64, bug 266506

  20 Mar 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml:
  Removing agorf as a maintainer since he was retired.

*coderay-0.8.260 (20 Dec 2008)

  20 Dec 2008; Hans de Graaff <graaff@gentoo.org> +coderay-0.8.260.ebuild:
  Version bump

  11 Apr 2008; Santiago M. Mola <coldwind@gentoo.org>
  coderay-0.7.4.215.ebuild:
  Added ~amd64.
