@@ -3,14 +3,16 @@ Hash: SHA1
 
 DIST coderay-0.8.260.gem 75264 RMD160 79f6744be0e0df8d8d1a67b1d6e4794f0ed8ba7f SHA1 68839aab8b2d71de9f514ae4da0a862ab32402c8 SHA256 1d29e324da861057b4307839efe439ab05d94e04c70085d5dbebee492f8ae685
 DIST coderay-0.9.1.gem 92672 RMD160 acc2dde113a28ad6f17d6d22be4f2d8cc436477e SHA1 af645cd435887120018b2b6cc34be0d9bf7febf6 SHA256 889438cc2e65819245636d2435258317637f4705e4e61741684d3b052c9d5531
+DIST coderay-0.9.2.455.pre.gem 92672 RMD160 abaa9bc2e79f0ce98ee8b3f68a24f8bacc8dfdce SHA1 bdd829759e06f18b835d2ad179b679d6a84c6a93 SHA256 dc0382d4299c8d7664ef1a8be9d3c4b6c311896448c456040fcf9b6a50c73f5c
 EBUILD coderay-0.8.260.ebuild 455 RMD160 43f6624113830d6bad71265acbea327b1b386511 SHA1 ef46bf2d85a07183349d7ee80b8083bd91a93224 SHA256 f639e61bfcf49403ec8a013cc026ac4dab6bbd312f4c21860e8a6bd6be97d5ff
 EBUILD coderay-0.9.1.ebuild 643 RMD160 6ce959a5092b13704c6f3ac1cd8604e6f96ccdef SHA1 087ea9418cbcd3ffc84bbfb5e7965abfb03172f4 SHA256 990dfcac0a213ba5763a7061ba0a0a7bc5b5568eedd31c9e19b9a2973b0456d8
-MISC ChangeLog 2141 RMD160 47c6005c40a4c4f6ce9f4f03d42be69f1a3425ce SHA1 ecd9877d3e43f49d89d185f73779422b50d1bfb9 SHA256 4bfd355eed23f2615f8b20308a4eaa2bb07195b9e04fffb9bb932ab49cccbf87
+EBUILD coderay-0.9.2_pre455.ebuild 1157 RMD160 db58ef9040c1af8a48507a746f6a244eba4b4034 SHA1 926f2856877b02551a92ba1e93ec4445842b7f66 SHA256 05c81c56986ee60bf2c862ef26d2e51dce522628f709e6d77fe4b59624c03477
+MISC ChangeLog 2506 RMD160 e4300da53838e9281d16b847c83a89f93645f0c4 SHA1 a43ec0754881f4b1d20c1957ae13faf342b6e68f SHA256 20d0f9da9681a86edd43823a2a0042140ebb9e718a13249201d1da37d3e3af13
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAktcUqEACgkQeM7EJeUH71ODcwCghHsTaL5LkXLCs0LEd+IBRqRU
-9HYAnirwiXyQ0yUpL1Tb6XMApup2/x5q
-=7IwL
+iEYEARECAAYFAkt+aJEACgkQAiZjviIA2XjOtQCfXBXri3a5G9LyjMWzIpWRJFBj
+od0An1LK5BJSiGzHUDNu+yvtqCeh0+wh
+=4QYu
 -----END PGP SIGNATURE-----
