@@ -1,6 +1,15 @@
 # ChangeLog for dev-ruby/coderay
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/coderay/ChangeLog,v 1.15 2010/01/24 14:00:59 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/coderay/ChangeLog,v 1.16 2010/02/19 10:32:59 flameeyes Exp $
+
+*coderay-0.9.2_pre455 (19 Feb 2010)
+
+  19 Feb 2010; Diego E. Pettenò <flameeyes@gentoo.org>
+  +coderay-0.9.2_pre455.ebuild:
+  Version bump, don't mask as it seems to work oute quite fine anyway. We
+  still don't have tests, but we unbundle term-ansicolor at least. Upstream
+  has been contacted to see for a full tarball release for tests and
+  documentation.
 
   24 Jan 2010; Hans de Graaff <graaff@gentoo.org> -coderay-0.8.312.ebuild,
   -coderay-0.8.357.ebuild, -coderay-0.8.357-r1.ebuild:
